fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   background: black;
   margin: 10px auto;
   position: relative;
-  width: 90%;
+  max-width: 900px;
   border: 25px solid white;
   box-shadow: 0px 5px 25px 10px rgba(0,0,0,0.3);
   
@@ -60,7 +60,7 @@ h4 {
   font-family: 'Lato';
 }
 .song-info {
-  margin-bottom: calc(100vh/2);
+  margin-bottom: calc(100vh/2.5);
 }
 
 
